--- a/Lambda Projects/Portfolio-II/generic.html
+++ b/Lambda Projects/Portfolio-II/generic.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <!--
 	Hyperspace by HTML5 UP
 	html5up.net | @ajlkn
@@ -33,13 +33,25 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Portfolio Page</h1>
-							<span class="image fit"><img src="images/FunBus_top.png" alt="Picture of a Fun Bus"></img></span>
-							<p>Here you can find pictures of websites I've authored.</p>
+							<span class="image fit"><img src="images/FunBus_top.png" alt="Picture of a Fun Bus"></span>
+							<p>Here you can find pictures of landing pages of websites I've authored.</p>
 						</div>
 					</section>
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<span class="image fit"><img src="images/FunBus_lower.png"></span>
+							<span class="image fit"><img src="images/FunBus_lower.png" alt="Picture Of a Fun Bus"></span>
+						</div>
+					</section>
+
+					<section id="sub" class="wrapper">
+						<div class="inner">
+							<span class="image fit"><img src="images/Spacewalkers_top.png" alt="Pictures of space."></span>
+						</div>
+					</section>
+
+					<section id="sub" class="wrapper">
+						<div class="inner">
+							<span class="image fit"><img src="images/Spacewalkers_bottom.png" alt="Pictures of space."></span>
 						</div>
 					</section>
 
@@ -50,6 +62,7 @@
 				<div class="inner">
 					<ul class="menu">
 						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; All rights reserved.</li><li>Content<a href="http://mjhartman.com/mjhartman/index.html">mjhartman.com</a></li>
 					</ul>
 				</div>
 			</footer>
