--- a/Lambda Projects/User Interface/User-Interface-master/User-Interface-master/great-idea-website/index.html
+++ b/Lambda Projects/User Interface/User-Interface-master/User-Interface-master/great-idea-website/index.html
@@ -6,7 +6,7 @@
 
   <title>Great Idea!</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+ Web" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
   <!--[if lt IE 9]>
@@ -16,58 +16,72 @@
 
   <body>
     <div class="container">
-    <nav class="top-nav">
-      <a href="#services">Services</a>
-      <a href="#product">Product</a>
-      <a href="#vision">Vision</a>
-      <a href="#features">Features</a>
-      <a href="#about">About</a>
-      <a href="#contact">Contact</a>
-    </nav>
+      <nav class="top-nav">
+        <a href="#services">Services</a>
+        <a href="#product">Product</a>
+        <a href="#vision">Vision</a>
+        <a href="#features">Features</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+      </nav>
   
-  <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
    
-  <div class="message">
-    <div class="left">  
-    <p id="main-message">
-        Innovation <br>
-          On <br>
-        Demand <br>
-    </p>
-    <br>
-    <button>Get Started</button>
-  </div>
+    <div class="message">
+      <div class="left">  
+        <p id="main-message">
+          Innovation <br>
+             On <br>
+          Demand <br>
+        </p>
+        <br>
+      <button>Get Started</button>
+    </div>
     
-  <img src="img/header-img.png" alt="Image of a code snippet." class="code-snippet">
+   <img src="img/header-img.png" alt="Image of a code snippet." class="code-snippet">
 
   
   </div>
-  Features
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
-
-  About
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
+<div class="top-section">
+<section class="features">
+  <h3>Features</h3>
+  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. 
+  Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+</section>
+<section class="about">
+  <h3>About</h3>
+  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. 
+  Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+</section>
+</div>
+<div class="bottom-section">
   <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
-  
-  Services
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
-
-  Product
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
-  Vision
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
-  Contact
-  123 Way 456 Street
-  Somewhere, USA
-  1 (888) 888-8888
-  sales@greatidea.io
-
-  Copyright Great Idea! 2018
+  <section class="services">
+    <h3>Services</h3>
+  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+   Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+</section>
+<section class="product">
+  <h3>Product</h3>
+  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. 
+  Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+</section>
+<section class="vision">
+  <h3>Vision</h3>
+  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+   Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+</section>
+</div>
+<footer class="main-footer">
+  <h3>Contact</h3>
+  <address>
+    123 Way 456 Street<br>
+    Somewhere, USA<br>
+    <a href="tel:">1 (888) 888-8888</a><br>
+    <a href="mailto:">sales@greatidea.io</a>
+  </address>
+  <p>Copyright&copy  Great Idea! 2019</p>
+</footer>
   </div>
   </body>
 </html>
