--- a/Lambda Projects/BuildWeek Safeplace/index.html
+++ b/Lambda Projects/BuildWeek Safeplace/index.html
@@ -1,33 +1,35 @@
-/* index.html */
+<!-- index.html -->
 
 <!DOCTYPE html>
 <html lang="en">
-    <head>
         <head>
             <title>Safe Space</title>
             <meta charset="utf-8" />
             <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no">
-            <script src="https://unpkg.com/react@latest/umd/react.development.js" crossorigin="anonymous"></script>
-            <script src="https://unpkg.com/react-dom@latest/umd/react-dom.development.js" crossorigin="anonymous"></script>
-            <script src="https://unpkg.com/@material-ui/core/umd/material-ui.development.js" crossorigin="anonymous"></script>
+            <script src="https://unpkg.com/react@latest/umd/react.development.js" crossorigin="anonymous" async></script>
+            <script src="https://unpkg.com/react-dom@latest/umd/react-dom.development.js" crossorigin="anonymous" async></script>
+            <script src="https://unpkg.com/@material-ui/core/umd/material-ui.development.js" crossorigin="anonymous" async></script>
             <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
             <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+            <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Good Times">
+            <link rel="stylesheet" href="./css/index.css">
         </head>
 
     <body>
-        <div class="contianer">
+        <div class="contianer" style="font-family: Good Times, sans-serif">
             <div class="header"">
                 <div class="navigation">
+                    <p class="pagetitle">home</p>
                  <ul>
-                     <li><a href="https://www.safeplace.com/about.html">about</a></li>
-                     <li><a href="https://www.safeplace.com/help.html">help</a></li>
+                     <li><a href="about.html">about</a></li>
+                     <li><a href="help.html">help</a></li>
                  </ul>
                 </div>
-                <section class="header">
+                <section class="main content">
                     <p>welcome to your safe place</p>
-                    <img src="https://www.safeplace.com/images/head.jpg" alt="Picure Of a Computer Generated Womans Head">
-                    <a href="https://www.safeplace.com/signup.html">submit</a>
-                    <p>already a member? sign in <a href="#"</p>
+                    <img src="images/head.jpg" alt="Picure Of a Computer Generated Womans Head">
+                    <a type="submit" href="signup.html">click to enter</a>
+                    <p class="subpicture">already a member? <a href="signup.htlm">sign in</a></p>
                 </section>
         </div>
     </div>
