--- a/Lambda Projects/BuildWeek Safeplace/index.html
+++ b/Lambda Projects/BuildWeek Safeplace/index.html
@@ -26,13 +26,16 @@
                  </ul>
                 </div>
                 <section class="main content">
-                    <p>welcome to your safe place</p>
+                    <p>welcome to your safe place</p><br>
+                    <p class="welcome">A place where positive energy flows</p><br>
+                    <p class="welcome">and you can have that positive energy</p><br>
+                    <p class="welcome">messaged to you throughout your day</p>
                     <img src="images/head.jpg" alt="Picure Of a Computer Generated Womans Head">
                     <a type="submit" href="signup.html">click to enter</a>
                     <p class="subpicture">already a member? <a href="signup.htlm">sign in</a></p>
                 </section>
-        </div>
-    </div>
-
+            </div>
+        </div> <!-- End Container-->
     </body>
+
 </html>
