--- a/Lambda Projects/BuildWeek Safeplace/about.html
+++ b/Lambda Projects/BuildWeek Safeplace/about.html
@@ -1,1 +1,101 @@
 <!DOCTYPE html>
+<html lang="en">
+        <head>
+            <title>Safe Space - About</title>
+            <meta charset="utf-8" />
+            <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no">
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"> </script>
+            <script src="https://unpkg.com/react@latest/umd/react.development.js" crossorigin="anonymous" ></script>
+            <script src="https://unpkg.com/react-dom@latest/umd/react-dom.development.js" crossorigin="anonymous" async defer></script>
+            <script src="https://unpkg.com/@material-ui/core/umd/material-ui.development.js" crossorigin="anonymous" async defer></script>
+            <script src="js/about.js"></script>
+            <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
+            <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+            <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Good Times">-->
+            <link rel="stylesheet" href="./css/index.css">
+        </head>
+        <body>
+            <div class="container home" style="font-family: Good Times">
+                <header>
+                  <h1 class="main-header">Credits:</h1>
+                  <nav class="main-nav">
+
+                  </nav>
+                </header>
+                <section class="main-content">
+                  <h2 class="first-heading">Erica Thacker - Team Leader</h2>
+                  <p class="testing">
+                  </p>
+                </section>
+                <section class="secondary">
+                  <div class="accordion">
+                    <div class="panel">
+                      <div class="panel-bar">
+                        <h3></h3>
+                        <div class="panel-buttons">
+                            <button class="panel-btn-open">Open</button>
+                            <button class="panel-btn-close hide-btn">Close</button>
+                        </div>
+                      </div>
+                      <div class="panel-content">
+                        <img src="images/Erica Thacker.png" alt="Picture Of Erica Thacker" style="width:300px; height:150px;">
+                        <p>Put Erica's Bio here></p>
+                        <a href="https://twitter.com/MaynardHartman1" class="fa-twitter">
+                            <span class="label">Twitter</span>
+                        </a>
+                      </div>
+                    </div><!-- end of panel -->
+                    <div class="panel">
+                      <div class="panel-bar">
+                        <h3>Amber Meador - Backend Engineer</h3>
+                        <div class="panel-buttons">
+                          <button class="panel-btn-open">Open</button>
+                          <button class="panel-btn-close hide-btn">Close</button>
+                        </div>
+                      </div>
+                      <div class="panel-content">
+                        <a src="images/Amber Meador.jpg" alt="Picture Of Amber Meador" style="width:150px; height:150px;"></a>
+                        <p>"Southern girl living in the Mile High City, kicking React, and taking Nodes" </p><a href="amberprograms.com"></a>
+                      </div>
+                      <div class="panel">
+                        <div class="panel-bar">
+                          <h3>Nolan Allen - Frontend Engineer</h3>
+                          <div class="panel-buttons">
+                            <button class="panel-btn-open">Open</button>
+                            <button class="panel-btn-close hide-btn">Close</button>
+                          </div>
+                        </div>
+                        <div class="panel-content">
+                          <a img src="images/gangstasloathavatar.jpg" alt="Picture Of Nolan Allen" style="width:150px; height:150px;"></a>
+                          <p>Put Nolan Allens Bio Here</p>
+                        </div>
+                      </div><!-- end of panel -->
+                      <div class="panel">
+                        <div class="panel-bar">
+                          <h3>Zach Overhulser - UI 1</h3>
+                          <div class="panel-buttons">
+                            <button class="panel-btn-open" >Open</button>
+                            <button class="panel-btn-close hide-btn">Close</button>
+                          </div>
+                        </div>
+                        <div class="panel-content">
+                          <a img src="images/smallerheadshotbinary.png" alt="Picture Of Nolan Allen" style="width:150px; height:150px;"></a>
+                          <p>Put Zach's Bio Here.</p>
+                        </div>
+                      </div><!-- end of panel -->
+                      <div class="panel">
+                        <div class="panel-bar">
+                          <h3>Maynard Hartman - UI 2</h3>
+                          <div class="panel-buttons">
+                            <a class="panel-btn-open" img src="images/smallerheadshotbinary.png" alt="Picture Of Nolan Allen" style="width:150px; height:150px;"></a>
+                            <a class="panel-btn-close hide-btn"></a>
+                          </div>
+                        </div>
+                        <div class="panel-content">
+                          <p>Put Maynard's Bio here</p>
+                        </div>
+                      </div><!-- end of panel -->
+                  </div>
+                </section>
+              </div>
+        </body>
