--- a/Lambda Projects/BuildWeek Safeplace/index.html
+++ b/Lambda Projects/BuildWeek Safeplace/index.html
@@ -9,6 +9,7 @@
             <script src="https://unpkg.com/react@latest/umd/react.development.js" crossorigin="anonymous" async></script>
             <script src="https://unpkg.com/react-dom@latest/umd/react-dom.development.js" crossorigin="anonymous" async></script>
             <script src="https://unpkg.com/@material-ui/core/umd/material-ui.development.js" crossorigin="anonymous" async></script>
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
             <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
             <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
             <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Good Times">
@@ -26,9 +27,9 @@
                  </ul>
                 </div>
                 <section class="main content">
-                    <p>welcome to your safe place</p><br>
-                    <p class="welcome">A place where positive energy flows</p><br>
-                    <p class="welcome">and you can have that positive energy</p><br>
+                    <p class="welcome">welcome to your safe place</p>
+                    <p class="welcome">A place where positive energy flows</p>
+                    <p class="welcome">and you can have that positive energy</p>
                     <p class="welcome">messaged to you throughout your day</p>
                     <img src="images/head.jpg" alt="Picure Of a Computer Generated Womans Head">
                     <a type="submit" href="signup.html">click to enter</a>
